--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,16 @@
+@import 'vars';
+
 .main {
     height: 100%;
-    
+    min-height: 100vh;
+    @include flex(row, center, center);
+}
+
+.todo {
+    width: 100%;
+    max-width: 450px;
+    padding: 30px;
+    background-color: #ededed;
+    box-shadow: 0 0 30px -5px #2c3e50;
+    border-radius: 5px;
 }
