--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'vars';
+
 body {
-    background: linear-gradient(180deg,#2ebf91,#8360c3);
+    background: $gradient;
     margin: 0;
     padding: 0;
     min-height: 100vh;
