refactor: rename main classes and added pathUrl to new task

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <main class="main">
-  <div class="todo">
-    <div class="todo__content">
-      <nav class="todo__nav">
-        <button class="todo__link" routerLink="/tasks">Список задач</button>
-        <button class="todo__add" routerLink="/tasks/new">+</button>
+  <div class="app">
+    <div class="app__content">
+
+      <nav class="app__nav">
+        <button class="app__link" routerLink="/tasks">Список задач</button>
+        <button class="app__add" routerLink="/tasks/new">+</button>
       </nav>
 
-      <h1 class="todo__title">TODOs</h1>
+      <h1 class="app__title">TODOs</h1>
 
       <router-outlet></router-outlet>
     </div>
