--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,9 +6,9 @@
     @include flex(row, center, center);
 }
 
-.todo {
+.app {
     width: 100%;
-    max-width: 450px;
+    max-width: 750px;
     padding: 30px;
     padding-top: 15px;
     background-color: #ededed;
