--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,10 @@
-<p>tasks works!</p>
-<p>tasks works!</p>
-<p>tasks works!</p>
-<p>tasks works!</p>
-<p>tasks works!</p>
+<div class="tasks">
+    <div class="tasks__column">
+        <app-tasks-list></app-tasks-list>
+    </div>
+    <div class="tasks__column">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
+
