--- a/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/src/app/tasks/tasks-list/tasks-list.component.html
@@ -1,12 +1,3 @@
 <ul>
-    <li>task item 1</li>
-    <li>task item 2</li>
-    <li>task item 3</li>
-    <li>task item 4</li>
-    <li>task item 5</li>
-    <li>task item 6</li>
-    <li>task item 7</li>
-    <li>task item 8</li>
-    <li>task item 9</li>
-    <li>task item 10</li>
+    <app-tasks-item></app-tasks-item>
 </ul>
