feat: added emmiter for delete task

--- a/src/app/tasks/tasks-list/tasks-item/tasks-item.component.html
+++ b/src/app/tasks/tasks-list/tasks-item/tasks-item.component.html
@@ -1,5 +1,5 @@
 <div class="task__item">
     <h4 class="task__item">{{task.title}}</h4>
     <p class="task__description">{{task.description}}</p>
-    <button (click)="deleteTask(task.id)">Delete Task</button>
+    <button (click)="deleteTask.emit(task.id)">Delete Task</button>
 </div>
