--- a/src/app/tasks/tasks-list/tasks-item/tasks-item.component.html
+++ b/src/app/tasks/tasks-list/tasks-item/tasks-item.component.html
@@ -1,5 +1,8 @@
 <div class="task__item">
     <h4 class="task__item">{{task.title}}</h4>
     <p class="task__description">{{task.description}}</p>
-    <button (click)="deleteTask.emit(task.id)">Delete Task</button>
+    <div class="task__control">
+        <button (click)="deleteTask(task.id)">Delete Task</button>
+        <button (click)="editTask(task.id)" class="task__btn">Edit Task</button>
+    </div>
 </div>
