--- a/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/src/app/tasks/tasks-list/tasks-list.component.html
@@ -1,3 +1,3 @@
 <h3>Tasks List</h3>
 
-<app-tasks-item *ngFor="let task of tasks" [task]="task" [routerLink]="'edit/' + [task.id]"></app-tasks-item>
+<app-tasks-item *ngFor="let task of tasks" [task]="task"></app-tasks-item>
