--- a/src/app/tasks/tasks-new/tasks-new.component.scss
+++ b/src/app/tasks/tasks-new/tasks-new.component.scss
@@ -1,6 +1,28 @@
 @import 'vars';
 .task {
     &__form {
-        @include flex(column)
+        @include flex(column);
+    }
+    &__input {
+        height: 30px;
+        padding-left: 15px;
+        box-sizing: border-box;
+        margin-bottom: 10px;
+        border-radius: 5px;
+        border: 1px solid #ddd
+    }
+    &__submit {
+        height: 30px;
+        background-color: $accent;
+        border-radius: 5px;
+        border: none;
+        font-size: 15px;
+        color: #dedede;
+        font-weight: 600;
+        transition: all .4s ease;
+        cursor: pointer;
+        &[disabled] {
+            background-color: #fff;
+        }
     }
 }
