--- a/src/app/tasks/tasks.component.scss
+++ b/src/app/tasks/tasks.component.scss
@@ -1,5 +1,7 @@
 @import "vars";
 
 .tasks {
-    @include flex(row, space-between);
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
 }
