--- a/src/app/tasks/tasks-list/tasks-item/tasks-item.component.scss
+++ b/src/app/tasks/tasks-list/tasks-item/tasks-item.component.scss
@@ -42,6 +42,10 @@
         box-shadow: 0 0 2px 3px rgba(0, 0, 0, 0.1);
         cursor: pointer;
         transition: all .4s ease;
+        & + & {
+            margin-top: 5px;
+        }
+        
         &.delete {
             background-color: red;
         }
