feat: app - added link to main

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <div class="app__content">
 
       <nav class="app__nav">
+        <button class="app__link" routerLink="">Home</button>
         <button class="app__link" routerLink="/tasks">Tasks List</button>
         <button class="app__add" routerLink="/tasks/new">+</button>
       </nav>
