--- a/src/app/tasks/tasks-new/tasks-new.component.scss
+++ b/src/app/tasks/tasks-new/tasks-new.component.scss
@@ -1,5 +1,8 @@
 @import 'vars';
 .task {
+    &__head {
+        @include flex(row, space-between, center);
+    }
     &__form {
         @include flex(column);
     }
@@ -24,5 +27,20 @@
         &[disabled] {
             background-color: #fff;
         }
+    }
+}
+
+.close {
+    height: 25px;
+    width: 25px;
+    border-radius: 100%;
+    border: none;
+    background-color: #fff;
+    flex-shrink: 0;
+    @include flex(row, center, center);
+    cursor: pointer;
+    box-shadow: 0 0 1px 2px rgba(0, 0, 0, 0.15);
+    svg {
+        width: 100%;
     }
 }
