feat: reset global styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,11 @@ body {
     min-height: 100vh;
     font-family: 'Montserrat', sans-serif;
 }
+
+h1, h2, h3, h4 {
+    font-weight: normal;
+}
+
+input, textarea {
+    font-family: inherit;
+}
