--- a/src/app/tasks/tasks-list/tasks-list.component.html
+++ b/src/app/tasks/tasks-list/tasks-list.component.html
@@ -1,3 +1,8 @@
 <h3>Tasks List</h3>
 
-<app-tasks-item *ngFor="let task of tasks" [task]="task"></app-tasks-item>
+<ng-container *ngIf="isNoTasks(); else tasksTemplate"> This is no tasks! </ng-container>
+
+<ng-template #tasksTemplate>
+    <app-tasks-item *ngFor="let task of tasks" [task]="task"></app-tasks-item>
+</ng-template>
+
